Update expiry column
