# openapi/src/openapi-src-v2.json
@@ -28,6 +28,12 @@
         },
         {
             "name": "ProgressEntries"
+        },
+        {
+            "name": "Metadata"
+        },
+        {
+            "name": "Sessions"
         }
     ],
     "paths": {
@@ -38,6 +44,9 @@
                 "description": "Create a questionnaire",
                 "operationId": "createQuestionnaires",
                 "parameters": [
+                    {
+                        "$ref": "#/components/parameters/onBehalfOf"
+                    },
                     {
                         "$ref": "#/components/parameters/apiVersion"
                     }
@@ -432,6 +441,63 @@
                                                     "is-authenticated": true
                                                 },
                                                 "expires": "2023-01-24T05:05:06Z"
+                                            }
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "$ref": "#/components/responses/BadRequest"
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/UnauthorizedError"
+                    },
+                    "403": {
+                        "$ref": "#/components/responses/Forbidden"
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/NotFound"
+                    }
+                }
+            }
+        },
+        "/questionnaires/{questionnaireId}/session/keep-alive": {
+            "get": {
+                "tags": ["Sessions"],
+                "summary": "Refresh session.",
+                "description": "Refresh the session related to a specific questionnaire id and owner.",
+                "operationId": "RefreshSession",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/questionnaireId"
+                    },
+                    {
+                        "$ref": "#/components/parameters/onBehalfOf"
+                    },
+                    {
+                        "$ref": "#/components/parameters/apiVersion"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/vnd.api+json": {
+                                "schema": {
+                                    "$ref": "json-schemas/api/_questionnaires_{questionnaireId}_sessions/get/res/200.json"
+                                },
+                                "example": {
+                                    "data": [
+                                        {
+                                            "id": "285cb104-0c15-4a9c-9840-cb1007f098fb",
+                                            "type": "sessions",
+                                            "attributes": {
+                                                "alive": true,
+                                                "duration": 900000,
+                                                "created": 1660249595000,
+                                                "expires": 1660250495000
                                             }
                                         }
                                     ]
